--- a/inquisitive.ipynb
+++ b/inquisitive.ipynb
@@ -20,8 +20,39 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 13,
    "id": "cd7a0ffc",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Are you Inquisitive (yes/no) :no\n",
+      "need improvement\n"
+     ]
+    }
+   ],
+   "source": [
+    "inq=input(\"Are you Inquisitive (yes/no) :\")\n",
+    "if inq==\"yes\":\n",
+    "    print(\"good\")\n",
+    "else:\n",
+    "    print(\"need improvement\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "9eb6b4bf",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "6855701f",
    "metadata": {},
    "outputs": [],
    "source": []
